fix(season): using wrong background for players

--- a/scss/specific/people.scss
+++ b/scss/specific/people.scss
@@ -41,7 +41,7 @@
     }
     &:hover {
       transition: .2s ease-in-out;
-      background: vars.$light-background;
+      background: vars.$light-sand;
     }
 
     & img {
